# microengine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  settings.ini
config/: settings.toml
doc/: Doxyfile
src/: main.cc
src/Engine/: Engine.cc  Engine.hh  EventListener.hh
src/Engine/Gameplay/: GameplayManager.cc  GameplayManager.hh  Player.cc  Player.hh  Scene.cc  Scene.hh
src/Engine/Graphics/: GraphicsManager.cc  GraphicsManager.hh
src/Engine/Input/: InputManager.cc  InputManager.hh
src/Engine/Input/Commands/: Command.hh  MoveLeftCommand.hh  MoveRightCommand.hh
src/Engine/Options/: Cli.cc  Cli.hh  GraphicsOptions.cc  GraphicsOptions.hh  Utils.hh
src/Engine/Settings/: EngineSettings.hh  GraphicsSettings.cc  GraphicsSettings.hh  Utils.cc  Utils.hh
